[package]
name = "habu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
clap = { version = "3", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.7"
