[package]
name = "habu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "3", features = ["derive"] }
dirs = "5"
pep440_rs = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_with = "1"
sha2 = "0.10"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
